--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
    <body>
     <h1>Shraddha's new Repo</h1>
-    <p>This is new feature</p>
+    <p>This is new feature(Dropdown)</p>
    </body> 
 </html>
